@@ -85,6 +85,9 @@ GNU coreutils NEWS                                    -*- outline -*-
   build failure when building from modified sources, as is common practice
   for a patched distribution package.
 
+  factor now builds on x86_64 with x32 ABI, by avoiding incompatible asm.
+  [bug introduced in coreutils-8.20]
+
   The check in the root-only tests to test whether our dummy user,
   $NON_ROOT_USERNAME, is able to run binaries from the build directory
   failed.  As a result, these tests have been skipped unnecessarily.
